# openai-agent-tracing-for-zdr

./: .env.example  .gitignore  LICENSE  README.md  analysis.ipynb  demo.py  local_tracer.py  pyproject.toml
dashboard-app/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
dashboard-app/api/: .cursor.json  .gitignore  api.py  logging_setup.py  package.json  pyproject.toml
dashboard-app/src/app/: globals.css  page.tsx  utils.ts
dashboard-app/src/app/charts/: page.tsx
dashboard-app/src/app/components/: App.tsx  Charts.tsx  Dashboard.tsx  Traces.tsx
dashboard-app/src/app/state/: AppContext.tsx
dashboard-app/src/app/traces/: page.tsx
dashboard-app/src/app/traces/[trace_id]/: page.tsx
