[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "openai>=1.98.0",
    "openai-agents>=0.2.4",
    "pandas>=2.3.1",
    "promptfoo>=0.1.0",
    "python-dotenv>=1.1.1",
    "sse-starlette>=3.0.2",
]
